--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <script src="./js/2-form.js" type="module"></script>
   </head>
   <body class="">
-    <load src="./1-gallery.html" />
-    <load src="./2-form.html" />
+    <a href="./1-gallery.html">Go to Gallery</a>
+    <a href="./2-form.html">Go to Form</a>
   </body>
 </html>
