--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,4 +1,24 @@
-<div class="backdrop js-backdrop">
-  <div class="modal"></div>
-</div>
-<ul class="gallery"></ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <script src="./js/2-form.js" type="module"></script>
+  </head>
+  <body class="">
+    <div class="backdrop js-backdrop">
+      <div class="modal"></div>
+    </div>
+    <ul class="gallery"></ul>
+    <script src="./js/1-gallery.js" type="module"></script>
+  </body>
+</html>
